lox_grammar.ebnf
(* precedence increases top to bottom *)
expression = equality ;
equality   = comparison, { ("==" | "!="),              comparison } ;
comparison = term,       { ("<"  | "<=" | ">" | ">="), term } ;
term       = factor,     { ("+"  | "-"),               factor } ;
factor     = unary,      { ("*"  | "/"),               unary } ;
unary      = { ("-" | "!") }, primary ;
primary    = NUMBER | STRING | "true" | "false" | "nil" | "(", expression, ")" ;
